--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,9 +10,11 @@
   "files": [
     "src/main.ts",
     "src/main.server.ts",
-    "server.ts"
+    "server.ts",
+    "node_modules/js-brasil/src/validate.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "node_modules/js-brasil/**/*.ts"
   ]
 }
